tests/NormalTests/paczka1/fuzzy1/85105800.err
Error in line 5: ulJrm A137 66,4
Error in line 16: G4KkkTf5BtE S11 129,49
Error in line 8: US8 A137 55,9
Error in line 2: G4KkkTf5BtE S11 80,7
Error in line 21: S640 A137 59,1
Error in line 22: US8 A845 27,7
Error in line 32: 2Ehb A137 -39,1
Error in line 11: ulJrm A845 117,5
Error in line 39: S640 S640 93,12
